--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "2.8.3",
+    "buffer": "^5.5.0",
+    "crypto-browserify": "^3.12.0",
     "del-cli": "^5.0.0",
+    "dotenv": "^16.1.4",
+    "events": "^3.1.0",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "path-browserify": "^1.0.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0"
   },
   "dependencies": {
     "core-js": "^3.30.2",
